--- a/src/pages/Home/styles/home.module.css
+++ b/src/pages/Home/styles/home.module.css
@@ -1,5 +1,5 @@
 .container {
-    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 ;
+    @apply max-w-5xl mx-auto px-4 sm:px-6 lg:px-8;
 }
 
 .title-bar {
@@ -12,31 +12,33 @@
 }
 
 .title {
-    @apply text-2xl font-bold text-gray-800;
+    @apply text-2xl font-bold text-gray-800 col-span-2;
     display: flex;
     justify-content: center;
     text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .subtitle {
-    @apply text-lg text-center text-gray-600 col-span-3;
+    @apply text-lg text-center text-gray-600 col-span-2;
 }
-
-/* .button {
-    @apply inline-block px-4 py-2 bg-blue-500 text-white text-base font-semibold rounded-md transition duration-300 ease-in-out;
-}
-
-.button:hover {
-    @apply bg-blue-700;
-} */
 
 .description {
-    @apply text-base text-gray-800 col-span-1;
+    @apply text-base text-gray-800 col-span-2;
 }
 
 .content {
-    @apply grid grid-cols-2 gap-40 p-20 justify-center items-center shadow rounded-lg;
+    @apply grid grid-cols-1 gap-8 p-20 justify-start items-center shadow rounded-lg;
 }
-.image {
-    @apply ml-28 h-64 w-72 object-cover rounded-3xl shadow-lg;
+
+.base {
+    @apply flex flex-col w-max h-auto items-start ;
+}
+
+.title1 {
+    @apply text-2xl font-bold m-0 p-0;
+}
+
+.gridContainer {
+    @apply grid gap-y-0 gap-28 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-start;
+    /* Adjusted gap to 4px between items */
 }
