--- a/src/pages/Events/Styles/Eventpage.module.css
+++ b/src/pages/Events/Styles/Eventpage.module.css
@@ -34,19 +34,19 @@
     z-index: 3;
     position: absolute;
     justify-content: flex-start;
-    top: 200px;
+    top: 100px;
     left: 8%;
   }
   
   .event_text_header h2
     {
-        font-size: 5rem;
+        font-size: 3rem;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         margin-left: 40px;
       }
   
   .event_text_header h3 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 45px;
   }
@@ -57,15 +57,15 @@
   }
   
   .event_card {
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
     z-index: 2;
   }
   
   .event_card img {
     image-resolution: 100%;
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
     border: 2px solid black;
     box-shadow: 2px 2px 5px black;
   }
@@ -76,12 +76,12 @@
     flex-direction: column;
     justify-content: space-around;
     height: 600px;
-    width: 600px;
+    width: 900px;
     background-color: var(--md-ref-palette-primary90);
     z-index: 3;
     border-radius: 20px;
     position: absolute;
-    top: 550px;
+    top: 500px;
     left: 8%; text-wrap:nowrap;
     box-shadow: 2px 2px 5px black, inset 2px 2px 4px black;
     overflow: hidden; /* Hides any content that overflows */
@@ -89,7 +89,7 @@
   }
   .longInfo1 {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.25rem;
     padding: 20px;
     background-color: var(--md-ref-palette-primary80);
     border-radius: 10px;
@@ -101,7 +101,19 @@
     font-weight: bold;
     padding: 40px;
     font-size: 1.25rem;
-    margin-top: auto;
+    margin-top: 20px;
+  }
+  button {
+    background-color: var(--md-ref-palette-primary80);
+    color: white;
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 50%;
+    border: none;
+    cursor: pointer;
   }
   
   .card2 {
