feat: admin functionalities added

--- a/src/layouts/styles/authLayout.module.css
+++ b/src/layouts/styles/authLayout.module.css
@@ -1,15 +1,15 @@
-.body {
+/* .body {
     @apply h-screen flex justify-center items-center;
-}
+} */
 
 .container {
-    @apply  bg-primary-0;
+    @apply  bg-primary-500 h-full mb-4;
 }
 
-.imgContainer {
+/* .imgContainer {
     @apply w-1/2 flex justify-center;
 }
 
 .svg {
     @apply w-4/5;
-}
+} */
