--- a/src/components/styles/Card1.module.css
+++ b/src/components/styles/Card1.module.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     z-index: 7;
 }
 
@@ -71,12 +72,16 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center; /* Change to center */
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-100px);
+    flex-wrap: wrap; 
+    overflow: hidden;
+    text-align: center; 
 }
+
 
 .cards:hover .face2 {
     transform: translateY(0);
@@ -88,6 +93,7 @@
     display: ruby-text-container;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .face2 a {
